--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
 }
 img {
     cursor: pointer;
-    border-radius: 20px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0 8px 16px -8px;
+    border-radius: 10px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0 13px 27px -5px, rgba(0, 0, 0, 0.3) 0 8px 16px -8px;
     transition: all .2s ease-in-out;
 }
 
